# esp-driver-monitor

./: README.md  partitions.csv  sdkconfig.defaults
components/esp32_s3_mobile/: CMakeLists.txt  README.md  esp32_s3_mobile.c  idf_component.yml
components/esp32_s3_mobile/include/bsp/: esp-bsp.h  esp32_s3_mobile.h
main/: CMakeLists.txt  app_sr_tts.c  app_sr_tts.h  display.c  display.h  idf_component.yml  main.c  max_30102.c  max_30102.h  motion.c  motion.h  vibration.c  vibration.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
main/ui/fonts/: ui_font_PHFont16.c  ui_font_PHFont18.c  ui_font_PHFont20.c  ui_font_PHFont22.c  ui_font_PHFont24.c  ui_font_PHFont26.c  ui_font_PHFont30.c
main/ui/images/: ui_img_2146430232.c  ui_img_284980415.c  ui_img_459267587.c  ui_img_heart_png.c  ui_img_o2_2_png.c  ui_img_o2_png.c
main/ui/screens/: ui_Screen1.c
